--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
 		
 	<div class="footer">
+	 <p>Follow us</p>
 		<ul>
 			<li class="network"><img src="facebook.svg"></li>
 			<li class="network"><img src="insta.svg"></li>
