--- a/index.html
+++ b/index.html
@@ -3,92 +3,97 @@
 	<head>
 		<title>The New Motorsport Scene of South Africa</title>
 			<link rel="stylesheet" type="text/css" href="style.css">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 <body>
-	<div class="navigation">
-		<ul>
-			<li id="sym">///M</li>
-			<li>About</li>
-			<li>Team Players</li>
-			<li>Spinners</li>
-			<li>NEW KING</li>
-			<li>Events</li>
-			<li>Arena</li>
-			<li>Contact Us</li>
-		</ul>
-	</div>
+<div class="navigation">
+	<ul>
+		<li id="sym"><a href="ART%20OF%20SPINNING.html">///M</a></li>
+		<li><a href="history.html">History</a></li>
+		<li><a href="spinners.html">Spinners</a></li>
+		<li><a href="events.html">Events</a></li>
+		<li><a href="arena.html">Arena</a></li>
+		<li><a href="aboutUs.html">About Us</a></li>
+	</ul>
+</div>
 
-	<div id="header">
-		<div class="head">
-			<h1>Spinning & Drifting of South Africa</h1>
-				<h2>The Love and The Support<h2>
-				<a href="about.html" class="btn">Learn More</a>
+<div id="header">
+	<div class="head">
+		<h1>Spinning & Drifting in South Africa</h1>
+		<h2>The Love and Support<h2>
+		<a href="history.html" class="btn">Learn More</a>
+	</div>
+</div>
+
+<div class="teams">
+<!--This sections gives information on  four major teams--> 
+	<h3 class="tplayer">Main Team Players</h3>
+	</div>
+</div>
+
+		<div class="team">
+		<h3>TEAM BGB</h3>
+		<img src="C:\Users\DMungal\Documents\website\bgb.jpg">
+			<p>Team BGB is one of the bestest spinning teams of South Africa 
+			and has one of the largest number of supporters and drivers. 
+			<br>Not shying away for the fact that they are a wealty team at most. That are shown off at the end day</br> 
+			Showcasing exceptional vehicles, including those representing them on the track at every event. 
+			<br>Originating form Pretoria and in support of the youngest memeber on the team named BARENG.</br></p>
 		</div>
-	</div>
-
-	<div class="teams">
-		<!--This sections gives information on  four major teams--> 
-			<h3 class="tplayer">Team Players</h3>
-	</div>
-
-	<div class="team">
-		<img src="bgb.jpg"><img src="bgb2.jpg">
-			<h3>TEAM BGB</h3>
-				<p>Team BGB is one of the bestest spinning teams of South Africa 
-				and has one of the largest number of supporters and drivers. 
-				<br>Not shying away for the fact that they are a wealty team at most. That are shown off at the end day</br> 
-				Showcasing exceptional vehicles, including those representing them on the track at every event. 
-				<br>Originating form Pretoria and in support of the youngest memeber on the team named BARENG.</br></p>
+		
+		<div class="team">
+		<h3>Team Numbi</h3>
+			<p>Team Numbi has a similar following as BGB, <br>with the large number of supporters and various drivers. They might not be as wealthy,</br> 
+			however they have a given talent that has claimed a young man by the name <br>samkeliso 'sam sam' thubane</br> 
+			the proud owner of R250 000.00 in a competition in 2017 and the crown of KING OF SPIN. 
+			read all about <a href="http://city-press.news24.com/Trending/spinning-success-20170107" target="_blank">"New King"</a>
+			</p>
+		<img src="C:\Users\DMungal\Documents\website\numbi.jpg">
+		</div>	
+		
+		<div class="team">
+		<h3>South Side Crew</h3>
+		<img src="C:\Users\DMungal\Documents\website\sscrew.jpg">
+			<p>Sounth Side crew, as the name states the Southern Part of Gauteng, Eldorando Park <br>to be precise. 
+			The Crew is home for new comers ages 10-12.<br> The oldest crew that is still around in todays day and age, 
+			however they are more of a brand, <br>relating to merchandising and up and coming plans to have an online store for parts purchases.<br>
+			<br>
+			<br>
+			<br>
+			</p>
 		</div>
 		
-	<div class="team">
-		<img src="numbi.jpg">
-			<h3>Team Numbi</h3>
-				<p>Team Numbi has a similar following as BGB, <br>with the large number of supporters and various drivers. They might not be as wealthy,</br> 
-				however they have a given talent that has claimed a young man by the name <br>samkeliso 'sam sam' thubane</br> 
-				the proud owner of R250 000.00 in a competition in 2017 and the crown of KING OF SPIN. 
-				read all about <a href="http://city-press.news24.com/Trending/spinning-success-20170107" target="_blank">"New King"</a>
-				</p>
-	</div>	
+		<div class="team">
+		<h3>Suntech Auto</h3>
+		<img src="C:\Users\DMungal\Documents\website\sunesh.jpg">
+			<p>Suntech Auto specialies in modifying and increasing perfomances vehicles specifally to BMW 325 range,<br>
+			from fuel management systems named DIKTATOR to dygnostics located in Benoni, East Rand.
+			They also know for exceptional vehicle repaires and maintances.</br>
+			The famous Sunesh Gungadin Pursad BENONI is the man behind THE ROCK RACEWAY spinning events 
+			and Wicked Wednesdays along with his wife, whom managers these events.
+			<br>Mr.Sunesh Gungadin Pursad is a fan of the sport and one of the best spinners.<br></p>
+		</div>
 		
-	<div class="team">
-		<img src="sscrew.jpg">
-			<h3>South Side Crew</h3>
-				<p>Sounth Side crew, as the name states the Southern Part of Gauteng, Eldorando Park <br>to be precise. 
-				The Crew is home for new comers ages 10-12.</br> The oldest crew that is still around in todays day and age, 
-				however they are more of a brand, <br>relating to merchandising and up and coming plans to have an online store for parts purchases.<br>
-				</p>
-	</div>
-		
-	<div class="team">
-		<img src="sunesh.jpg">
-			<h3>Suntec Auto</h3>
-				<p>Suntec Auto specialies in modifying and increasing perfomances vehicles specifally to BMW 325 range,<br>
-				from fuel management systems named DIKTATOR to dygnostics located in Benoni, East Rand.
-				They also know for exceptional vehicle repaires and maintances.</br>
-				The famous Sunesh Gungadin Pursad BENONI is the man behind THE ROCK RACEWAY spinning events 
-				and Wicked Wednesdays along with his wife, whom managers these events.
-				<br>Mr.Sunesh Gungadin Pursad is a fan of the sport and one of the best spinners.<br></p>
-	</div>
-		
-			<h3>The ever Growing Sport gathers more and more support, 
-			about to become an offical sport
-			that will be televised World Wide</h3>
+		<h3>The ever Growing Sport gathers more and more support, 
+		about to become an offical sport
+		that will be televised World Wide</h3>
 
-
-		
 	<div class="footer">
-	 <p>Follow us</p>
 		<ul>
-			<li class="network"><img src="facebook.svg"></li>
-			<li class="network"><img src="insta.svg"></li>
-			<li class="network"><img src="linked.svg"></li>
-			<li class="network"><img src="twit.svg"></li>
-			<li class="network"><img src="google+.svg"></li>
+			<li class="network"><a href="https://www.facebook.com/"><img src="facebook.svg"></a></li>
+			<li class="network"><a href="https://www.instagram.com/?hl=en"><img src="insta.svg"></a></li>
+			<li class="network"><a href="https://www.linkedin.com/uas/login"><img src="linked.svg"></a></li>
+			<li class="network"><a href="https://twitter.com/"><img src="twit.svg"></a></li>
+			<li class="network"><a href="https://plus.google.com/explore"><img src="google+.svg"></a></li>
 		</ul>
-			<p>&copy; Zyelabs.net</p>
+		 <p>&copy; Zyelabs.net 2017. All Rights Reserved</p>
 	</div>
 </body>
 </html>
 		
+
+
+
+
+</html>
