--- a/spinners.html
+++ b/spinners.html
@@ -74,7 +74,7 @@
 			<section id="Section 4">
 				<h2>Lil Kim</h2>
 				<video width="320" height="240" controls="controls">
-					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCWVFZXzlnbzJ4R2c/view?usp=sharing.mp4" 
+					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCaU03QVViYXpYNGc/view?usp=sharing.mp4" 
 					type="video/mp4">
 				</video>
 			</section>
@@ -106,7 +106,7 @@
 			<section id="Section 8">
 				<h2>Panjaro</h2>
 				<video width="320" height="240" controls="controls">
-					<source src="https://drive.google.com/open?id=0B95_ncsu8RhCZmYxMjh0R3BTd2c.mp4" 
+					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCZmYxMjh0R3BTd2c/view?usp=sharing.mp4" 
 					type="video/mp4">
 				</video>
 			</section>
@@ -114,7 +114,7 @@
 			<section id="Section 9">
 				<h2>Team BGB</h2>
 				<video width="320" height="240" controls="controls">
-					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCMGZVTTRuSTdIYkE/view?usp=sharing.mp4" 
+					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCMGZVTTRuSTdIYkE/view?usp=sharingmp4" 
 					type="video/mp4">
 				</video>
 			</section>
@@ -152,12 +152,12 @@
 			<section id="Section 14">
 				<h2>Extras</h2>
 				<video width="320" height="240" controls="controls">
-					<source src="vid\14 klipas.mp4" type="video/mp4">
+					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCcUo4NFYwM3NRcUU/view?usp=sharing.mp4" type="video/mp4">
 				</video>
 	
 				<h2>Eddie Rasta vs Austin</h2>
 				<video width="320" height="240" controls="controls">
-					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCcUo4NFYwM3NRcUU/view?usp=sharing.mp4" type="video/mp4">
+					<source src="https://drive.google.com/file/d/0B95_ncsu8RhCMTRCTVh5STdfS0E/view?usp=sharing.mp4" type="video/mp4">
 				</video>
 	
 				
