--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<div class="team">
 		<h3>TEAM BGB</h3>
-		<img src="C:\Users\DMungal\Documents\website\bgb.jpg">
+		<img src="bgb.jpg">
 			<p>Team BGB is one of the bestest spinning teams of South Africa 
 			and has one of the largest number of supporters and drivers. 
 			<br>Not shying away for the fact that they are a wealty team at most. That are shown off at the end day</br> 
@@ -49,12 +49,12 @@
 			the proud owner of R250 000.00 in a competition in 2017 and the crown of KING OF SPIN. 
 			read all about <a href="http://city-press.news24.com/Trending/spinning-success-20170107" target="_blank">"New King"</a>
 			</p>
-		<img src="C:\Users\DMungal\Documents\website\numbi.jpg">
+		<img src="numbi.jpg">
 		</div>	
 		
 		<div class="team">
 		<h3>South Side Crew</h3>
-		<img src="C:\Users\DMungal\Documents\website\sscrew.jpg">
+		<img src="sscrew.jpg">
 			<p>Sounth Side crew, as the name states the Southern Part of Gauteng, Eldorando Park <br>to be precise. 
 			The Crew is home for new comers ages 10-12.<br> The oldest crew that is still around in todays day and age, 
 			however they are more of a brand, <br>relating to merchandising and up and coming plans to have an online store for parts purchases.<br>
@@ -66,7 +66,7 @@
 		
 		<div class="team">
 		<h3>Suntech Auto</h3>
-		<img src="C:\Users\DMungal\Documents\website\sunesh.jpg">
+		<img src="sunesh.jpg">
 			<p>Suntech Auto specialies in modifying and increasing perfomances vehicles specifally to BMW 325 range,<br>
 			from fuel management systems named DIKTATOR to dygnostics located in Benoni, East Rand.
 			They also know for exceptional vehicle repaires and maintances.</br>
