--- a/index.html
+++ b/index.html
@@ -4,96 +4,113 @@
 		<title>The New Motorsport Scene of South Africa</title>
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" 
+			integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" 
+			crossorigin="anonymous">
 	</head>
 
 <body>
-<div class="navigation">
-	<ul>
-		<li id="sym"><a href="ART%20OF%20SPINNING.html">///M</a></li>
-		<li><a href="history.html">History</a></li>
-		<li><a href="spinners.html">Spinners</a></li>
-		<li><a href="events.html">Events</a></li>
-		<li><a href="arena.html">Arena</a></li>
-		<li><a href="aboutUs.html">About Us</a></li>
-	</ul>
-</div>
+		<div class="col-lg-12 col-md-12 mb-4">
+			<div class="navigation">
+				<ul>
+					<li id="sym"><a href="index.html">///M</a></li>
+					<li><a href="history.html">History</a></li>
+					<li><a href="spinners.html">Spinners</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="arena.html">Arena</a></li>
+					<li><a href="aboutUs.html">About Us</a></li>
+				</ul>
+			</div>
+		</div>
 
-<div id="header">
-	<div class="head">
-		<h1>Spinning & Drifting in South Africa</h1>
-		<h2>The Love and Support<h2>
-		<a href="history.html" class="btn">Learn More</a>
+	<div id="header">
+		<div class="head">
+			<div class="col-lg-12 col-md-12 mb-4">
+			<h1>Spinning & Drifting in South Africa</h1>
+			<h2>The Love and Support<h2>
+			<a href="history.html" class="btn">Learn More</a>
+			</div>
+		</div>
 	</div>
-</div>
 
-<div class="teams">
-<!--This sections gives information on  four major teams--> 
-	<h3 class="tplayer">Main Team Players</h3>
-	</div>
-</div>
+	<!--This sections gives information on  four major teams-->
+	
+	<div id="content">
+		<div class="col-lg-12 col-md-12 mb-12">
+			<div class="teams">
+				<h3>Main Team Players</h3>
+			</div>
+		</div>
 
-		<div class="team">
-		<h3>TEAM BGB</h3>
-		<img src="C:\Users\DMungal\Documents\website\bgb.jpg">
-			<p>Team BGB is one of the bestest spinning teams of South Africa 
-			and has one of the largest number of supporters and drivers. 
-			<br>Not shying away for the fact that they are a wealty team at most. That are shown off at the end day</br> 
-			Showcasing exceptional vehicles, including those representing them on the track at every event. 
-			<br>Originating form Pretoria and in support of the youngest memeber on the team named BARENG.</br></p>
+		<div class="col-lg-12 col-md-6 mb-4">
+		 <div class="card">
+			<img class="image_top" src="bgb.jpg" alt="">
+				<div class="card_info">
+					<h4 class="title">TEAM BGB</h4>
+					<p class="text">Team BGB is one of the bestest spinning teams of South Africa 
+					and has one of the largest number of supporters and drivers. 
+					Showcasing exceptional vehicles, from personal vehicles on and off the track.. 
+					Originating form Pretoria and in support of the youngest memeber on the team named BARENG.</p>
+				</div>
+			</div>
+		</div>
+				
+		<div class="col-lg-12 col-md-6 mb-4">
+			 <div class="card">
+				<img class="image_top" src="numbi.jpg" alt="">
+					<div class="card_info">
+					<h4 class="title">Team Numbi</h4>
+						<p class="text">Team Numbi with the large number of supporters and various drivers.
+						They have a rising talent that has claimed a young man by the name 
+						<strong>Samkeliso 'sam sam' Thubane</strong>, the proud owner of R250 000.00 in a competition in 2017 and the crown of KING OF SPIN. 
+						read all about <a href="http://city-press.news24.com/Trending/spinning-success-20170107" target="_blank">"New King"</a></p>
+					</div>
+				</div>
+			</div>
+				
+		<div class="col-lg-12 col-md-6 mb-4">
+		 <div class="card">
+			<img class="image_top" src="sscrew.jpg" alt="">
+				<div class="card_info">
+				<h4 class="title">South Side Crew</h4>
+					<p class="text">Sounth Side crew, as the name states the Southern Part of Gauteng, Eldorando Park to be precise. 
+					The Crew is home for new comers ages 10-12. The oldest crew that is still around in todays day and age, 
+					however they are more of a brand, relating to merchandising and up and coming plans to have an online store for parts purchases.
+					</p>
+				</div>
+			</div>
 		</div>
 		
-		<div class="team">
-		<h3>Team Numbi</h3>
-			<p>Team Numbi has a similar following as BGB, <br>with the large number of supporters and various drivers. They might not be as wealthy,</br> 
-			however they have a given talent that has claimed a young man by the name <br>samkeliso 'sam sam' thubane</br> 
-			the proud owner of R250 000.00 in a competition in 2017 and the crown of KING OF SPIN. 
-			read all about <a href="http://city-press.news24.com/Trending/spinning-success-20170107" target="_blank">"New King"</a>
-			</p>
-		<img src="C:\Users\DMungal\Documents\website\numbi.jpg">
-		</div>	
-		
-		<div class="team">
-		<h3>South Side Crew</h3>
-		<img src="C:\Users\DMungal\Documents\website\sscrew.jpg">
-			<p>Sounth Side crew, as the name states the Southern Part of Gauteng, Eldorando Park <br>to be precise. 
-			The Crew is home for new comers ages 10-12.<br> The oldest crew that is still around in todays day and age, 
-			however they are more of a brand, <br>relating to merchandising and up and coming plans to have an online store for parts purchases.<br>
-			<br>
-			<br>
-			<br>
-			</p>
+			<div class="col-lg-12 col-md-6 mb-4">
+			 <div class="card">
+				<img class="image_top" src="sunesh.jpg" alt="">
+					<div class="card_info">
+					<h4 class="title">Suntech Auto</h4>
+						<p class="text">Suntech Auto specialies in modifying and increasing perfomances vehicles specifally to BMW 325 range,
+						from fuel management systems named DIKTATOR to dygnostics located in Benoni, East Rand.
+						They also know for exceptional vehicle repaires and maintances.
+						The famous Sunesh Gungadin Pursad BENONI is the man behind THE ROCK RACEWAY spinning events 
+						and Wicked Wednesdays along with his wife, whom managers these events.
+						Mr.Sunesh Gungadin Pursad is a fan of the sport and one of the best spinners.</p>
+					</div>
+				</div>
+			</div>	
+
+			<div class="col-lg-12 col-md-12 mb-4">
+				<div class="footer">
+					<h5 class="ending_txt">The ever Growing Sport gathers more and more support, 
+					about to become an offical sport
+					that will be televised World Wide</h5>
+					<ul>
+						<li class="network"><a href="https://www.facebook.com/"><img src="facebook.svg"></a></li>
+						<li class="network"><a href="https://www.instagram.com/?hl=en"><img src="insta.svg"></a></li>
+						<li class="network"><a href="https://www.linkedin.com/uas/login"><img src="linked.svg"></a></li>
+						<li class="network"><a href="https://twitter.com/"><img src="twit.svg"></a></li>
+						<li class="network"><a href="https://plus.google.com/explore"><img src="google+.svg"></a></li>
+					</ul>
+					 <p>&copy; Zyelabs.net 2017. All Rights Reserved</p>
+				</div>
+			</div>
 		</div>
-		
-		<div class="team">
-		<h3>Suntech Auto</h3>
-		<img src="C:\Users\DMungal\Documents\website\sunesh.jpg">
-			<p>Suntech Auto specialies in modifying and increasing perfomances vehicles specifally to BMW 325 range,<br>
-			from fuel management systems named DIKTATOR to dygnostics located in Benoni, East Rand.
-			They also know for exceptional vehicle repaires and maintances.</br>
-			The famous Sunesh Gungadin Pursad BENONI is the man behind THE ROCK RACEWAY spinning events 
-			and Wicked Wednesdays along with his wife, whom managers these events.
-			<br>Mr.Sunesh Gungadin Pursad is a fan of the sport and one of the best spinners.<br></p>
-		</div>
-		
-		<h3>The ever Growing Sport gathers more and more support, 
-		about to become an offical sport
-		that will be televised World Wide</h3>
-
-	<div class="footer">
-		<ul>
-			<li class="network"><a href="https://www.facebook.com/"><img src="facebook.svg"></a></li>
-			<li class="network"><a href="https://www.instagram.com/?hl=en"><img src="insta.svg"></a></li>
-			<li class="network"><a href="https://www.linkedin.com/uas/login"><img src="linked.svg"></a></li>
-			<li class="network"><a href="https://twitter.com/"><img src="twit.svg"></a></li>
-			<li class="network"><a href="https://plus.google.com/explore"><img src="google+.svg"></a></li>
-		</ul>
-		 <p>&copy; Zyelabs.net 2017. All Rights Reserved</p>
-	</div>
-</body>
-</html>
-		
-
-
-
-
+	</body>
 </html>
